manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-crud
  namespace: quarkus-crud
  labels:
    environment: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.ingress-nginx.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://authn.ouchiserver.aokiapp.com/oauth2/sign_in?rd=https%3A%2F%2F$host$escaped_request_uri"
spec:
  tls:
    - hosts:
        - "*.ouchiserver.aokiapp.com"
      secretName: service-tls
  rules:
    - host: quarkus-crud.ouchiserver.aokiapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
